# retrollm

./: .gitignore  CLI_REFERENCE.md  LICENSE  README.md  SETUP.md  environment.yml  pyproject.toml
src/retrollm/: __init__.py  cli.py  config.py  doctor.py  finder.py  stock.py
src/retrollm/chem/: __init__.py  molecule.py
src/retrollm/data/: public_data.py
src/retrollm/llm/: __init__.py  controller.py  provider_loader.py
src/retrollm/llm/providers/: __init__.py  base.py  openai_compatible.py
src/retrollm/policy/: __init__.py  onnx_filter.py  onnx_policy.py  reaction_engine.py  templates.py
src/retrollm/search/: __init__.py  node.py  state.py  tree.py
src/retrollm/utils/: __init__.py  env.py  smarts.py
tests/: test_cli.py  test_doctor.py  test_llm_workflow.py  test_provider_loader.py  test_search_features.py  test_smoke_policy.py  test_state_and_node.py
